# game-simon-says

./: .gitignore  .travis.yml  CMakeLists.txt  README.md
doc/: UML structure.graffle
src/: CMakeLists.txt  main.cpp
src/Controller/: GameController.cpp  GameController.h
src/Game/SimonSays/: CMakeLists.txt  SimonController.cpp  SimonController.h  main.cpp
src/Model/: Board.cpp  Board.h  Game.cpp  GameLogic.cpp  GameLogic.h  Move.cpp  Move.h  Player.cpp  Player.h  PlayerAI.cpp  PlayerAI.h  PlayerHuman.cpp  PlayerHuman.h
src/View/: BoardRenderer.cpp  BoardRenderer.h
src/doc/: UML sequence.txt  UML structure.graffle
src/simonsays/: CMakeLists.txt  Game.cpp  Game.h  Player.cpp  Player.h  SimonSays.cpp  SimonSays.h
test/: CMakeLists.txt
test/src/: Board_tests.cpp  Game_tests.cpp  SimonSays_tests.cpp
