cmake_minimum_required(VERSION 3.2)

set(CMAKE_CXX_STANDARD 14)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -O3")

set(CMAKE_INSTALL_PREFIX ${PROJECT_SOURCE_DIR})

set(TARGET_LIBRARY_INSTALL_INCLUDE_DIR ${PROJECT_SOURCE_DIR}/include)
set(TARGET_LIBRARY_INSTALL_BIN_DIR ${PROJECT_SOURCE_DIR}/bin)
set(TARGET_LIBRARY_INSTALL_LIB_DIR ${PROJECT_SOURCE_DIR}/lib)

set(TARGET_BINARY_HEADERS_DIR ${PROJECT_SOURCE_DIR}/src/simonsays)

include_directories(${TARGET_LIBRARY_INSTALL_INCLUDE_DIR})
include_directories(${TARGET_BINARY_HEADERS_DIR})

add_subdirectory(src)
add_subdirectory(test)


